--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -81,6 +81,7 @@
     border-radius: rem(6);
     padding: rem(16);
     font-size: var(--fs-1);
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: em(2);
     color: var(--white);
